--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,9 @@
 		<!-- Gravitee's project versions -->
 		<gravitee-gateway-api.version>1.8.0</gravitee-gateway-api.version>
 		<gravitee-common.version>1.9.0</gravitee-common.version>
-		<gravitee-reporter-api.version>1.9.0</gravitee-reporter-api.version>
+		<gravitee-reporter-api.version>1.10.0-SNAPSHOT</gravitee-reporter-api.version>
 		<gravitee-policy-api.version>1.2.0</gravitee-policy-api.version>
-		<gravitee-repository.version>1.13.0</gravitee-repository.version>
+		<gravitee-repository.version>1.17.0-SNAPSHOT</gravitee-repository.version>
 
 		<freemarker.version>2.3.26-incubating</freemarker.version>
 	</properties>
