--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,11 @@
 	<properties>
 		<!-- Gravitee's project versions -->
 		<gravitee-gateway-api.version>1.11.0</gravitee-gateway-api.version>
-		<gravitee-common.version>1.12.0</gravitee-common.version>
+		<gravitee-common.version>1.13.0-SNAPSHOT</gravitee-common.version>
 		<gravitee-reporter-api.version>1.11.0</gravitee-reporter-api.version>
 		<gravitee-policy-api.version>1.2.0</gravitee-policy-api.version>
 		<gravitee-repository.version>1.19.0</gravitee-repository.version>
-
+		<gravitee-node.version>1.0.0-SNAPSHOT</gravitee-node.version>
 		<freemarker.version>2.3.26-incubating</freemarker.version>
 	</properties>
 
@@ -76,11 +76,22 @@
 				<version>${gravitee-repository.version}</version>
 				<scope>provided</scope>
 			</dependency>
+			<dependency>
+				<groupId>io.gravitee.node</groupId>
+				<artifactId>gravitee-node-api</artifactId>
+				<version>${gravitee-node.version}</version>
+				<scope>provided</scope>
+			</dependency>
         </dependencies>
 	</dependencyManagement>
 
 	<dependencies>
 		<!-- Gravitee internal dependencies -->
+		<dependency>
+			<groupId>io.gravitee.node</groupId>
+			<artifactId>gravitee-node-api</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>io.gravitee.common</groupId>
 			<artifactId>gravitee-common</artifactId>
