--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,9 @@
 		<!-- Gravitee's project versions -->
 		<gravitee-gateway-api.version>1.11.0</gravitee-gateway-api.version>
 		<gravitee-common.version>1.13.0-SNAPSHOT</gravitee-common.version>
-		<gravitee-reporter-api.version>1.11.0</gravitee-reporter-api.version>
+		<gravitee-reporter-api.version>1.12.0-SNAPSHOT</gravitee-reporter-api.version>
 		<gravitee-policy-api.version>1.2.0</gravitee-policy-api.version>
-		<gravitee-repository.version>1.19.0</gravitee-repository.version>
+		<gravitee-repository.version>1.20.0-SNAPSHOT</gravitee-repository.version>
 		<gravitee-node.version>1.0.0-SNAPSHOT</gravitee-node.version>
 		<freemarker.version>2.3.26-incubating</freemarker.version>
 	</properties>
