--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>io.gravitee</groupId>
 		<artifactId>gravitee-parent</artifactId>
-		<version>14</version>
+		<version>15</version>
 	</parent>
 
 	<groupId>io.gravitee.elasticsearch</groupId>
@@ -142,6 +142,13 @@
 			<artifactId>logback-core</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<!-- Unit Tests -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -150,7 +157,7 @@
 
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
+			<artifactId>mockito-core</artifactId>
 		</dependency>
 	</dependencies>
 
