--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,9 @@
 
 	<properties>
 		<!-- Gravitee's project versions -->
-		<gravitee-gateway-api.version>1.14.0</gravitee-gateway-api.version>
+		<gravitee-gateway-api.version>1.15.0-SNAPSHOT</gravitee-gateway-api.version>
 		<gravitee-common.version>1.14.0</gravitee-common.version>
-		<gravitee-reporter-api.version>1.13.0</gravitee-reporter-api.version>
+		<gravitee-reporter-api.version>1.14.0-SNAPSHOT</gravitee-reporter-api.version>
 		<gravitee-policy-api.version>1.4.0</gravitee-policy-api.version>
 		<gravitee-repository.version>1.25.0-SNAPSHOT</gravitee-repository.version>
 		<gravitee-node.version>1.3.0</gravitee-node.version>
