--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<gravitee-common.version>1.15.2</gravitee-common.version>
 		<gravitee-reporter-api.version>1.14.0</gravitee-reporter-api.version>
 		<gravitee-policy-api.version>1.5.0</gravitee-policy-api.version>
-		<gravitee-repository.version>1.26.0</gravitee-repository.version>
+		<gravitee-repository.version>1.25.3-SNAPSHOT</gravitee-repository.version>
 		<gravitee-node.version>1.4.3</gravitee-node.version>
 		<freemarker.version>2.3.26-incubating</freemarker.version>
 	</properties>
