--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,11 @@
 	<properties>
 		<!-- Gravitee's project versions -->
 		<gravitee-gateway-api.version>1.19.1</gravitee-gateway-api.version>
-		<gravitee-common.version>1.15.2</gravitee-common.version>
-		<gravitee-reporter-api.version>1.16.0</gravitee-reporter-api.version>
+		<gravitee-common.version>1.16.0-SNAPSHOT</gravitee-common.version>
+		<gravitee-reporter-api.version>1.17.0-SNAPSHOT</gravitee-reporter-api.version>
 		<gravitee-policy-api.version>1.6.0</gravitee-policy-api.version>
-		<gravitee-repository.version>1.29.2</gravitee-repository.version>
-		<gravitee-node.version>1.5.1</gravitee-node.version>
+		<gravitee-repository.version>1.30.0-SNAPSHOT</gravitee-repository.version>
+		<gravitee-node.version>1.6.0-SNAPSHOT</gravitee-node.version>
 		<freemarker.version>2.3.26-incubating</freemarker.version>
 	</properties>
 
