--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,10 @@
 	<properties>
 		<!-- Gravitee's project versions -->
 		<gravitee-gateway-api.version>1.20.0</gravitee-gateway-api.version>
-		<gravitee-common.version>1.16.1</gravitee-common.version>
-		<gravitee-reporter-api.version>1.17.0</gravitee-reporter-api.version>
+		<gravitee-common.version>1.16.2-SNAPSHOT</gravitee-common.version>
+		<gravitee-reporter-api.version>1.17.1-SNAPSHOT</gravitee-reporter-api.version>
 		<gravitee-policy-api.version>1.6.0</gravitee-policy-api.version>
-		<gravitee-repository.version>1.30.1</gravitee-repository.version>
+		<gravitee-repository.version>1.30.2-SNAPSHOT</gravitee-repository.version>
 		<gravitee-node.version>1.6.1</gravitee-node.version>
 		<freemarker.version>2.3.26-incubating</freemarker.version>
 	</properties>
