chore: Manage and remove useless dependencies
Closes gravitee-io/issues#4565

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,7 @@
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-rx-java2</artifactId>
 			<version>${vertx.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
