feat(assign-metrics): use custom metrics in reporter
Closes gravitee-io/issues#4769

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 		<!-- Gravitee's project versions -->
 		<gravitee-gateway-api.version>1.22.0</gravitee-gateway-api.version>
 		<gravitee-common.version>1.19.0</gravitee-common.version>
-		<gravitee-reporter-api.version>1.18.0</gravitee-reporter-api.version>
+		<gravitee-reporter-api.version>1.19.0-SNAPSHOT</gravitee-reporter-api.version>
 		<gravitee-policy-api.version>1.10.0</gravitee-policy-api.version>
 		<gravitee-repository.version>3.4.0</gravitee-repository.version>
 		<gravitee-node.version>1.10.0</gravitee-node.version>
