--- a/gravitee-common-elasticsearch/pom.xml
+++ b/gravitee-common-elasticsearch/pom.xml
@@ -53,6 +53,11 @@
 			<version>${freemarker.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
 		<!-- Unit Tests -->
 		<dependency>
 			<groupId>org.springframework</groupId>
