--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,7 @@
 	<parent>
 		<groupId>io.gravitee</groupId>
 		<artifactId>gravitee-parent</artifactId>
-		<!-- <version>17.1</version> -->
-		<version>17.2</version>
+		<version>19.5-SNAPSHOT</version>
 	</parent>
 
 	<groupId>io.gravitee.elasticsearch</groupId>
@@ -42,7 +41,7 @@
 		<gravitee-policy-api.version>1.10.0</gravitee-policy-api.version>
 		<gravitee-repository.version>3.6.1</gravitee-repository.version>
 		<gravitee-node.version>1.10.0</gravitee-node.version>
-		<freemarker.version>2.3.30</freemarker.version>
+		<freemarker.version>2.3.31</freemarker.version>
 		<commons-validator.version>1.7</commons-validator.version>
 	</properties>
 
@@ -88,6 +87,13 @@
 				<groupId>commons-validator</groupId>
 				<artifactId>commons-validator</artifactId>
 				<version>${commons-validator.version}</version>
+			</dependency>
+			<!-- Jackson dependencies -->
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson.version}</version>
+				<scope>provided</scope>
 			</dependency>
         </dependencies>
 	</dependencyManagement>
