--- a/gravitee-repository-elasticsearch/pom.xml
+++ b/gravitee-repository-elasticsearch/pom.xml
@@ -40,8 +40,8 @@
 
 		<!-- Gravitee.io dependencies -->
 		<dependency>
-			<groupId>io.gravitee.repository</groupId>
-			<artifactId>gravitee-repository</artifactId>
+			<groupId>io.gravitee.apim.repository</groupId>
+			<artifactId>gravitee-apim-repository-api</artifactId>
 		</dependency>
 
 		<!-- Used to consume JSON REST services -->
