--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
     <groupId>io.gravitee.elasticsearch</groupId>
     <artifactId>gravitee-common-elasticsearch</artifactId>
-    <version>3.13.0-SNAPSHOT</version>
+    <version>3.12.0</version>
 
     <name>Gravitee.io APIM - Elasticsearch - Common</name>
 
