--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
 	<groupId>io.gravitee.elasticsearch</groupId>
 	<artifactId>gravitee-common-elasticsearch</artifactId>
-    <version>3.5.7-SNAPSHOT</version>
+    <version>3.5.6</version>
 
 	<name>Gravitee.io APIM - Elasticsearch - Common</name>
 
