--- a/pom.xml
+++ b/pom.xml
@@ -28,14 +28,14 @@
 
     <groupId>io.gravitee.elasticsearch</groupId>
     <artifactId>gravitee-common-elasticsearch</artifactId>
-    <version>3.12.1</version>
+    <version>4.0.0-alpha.1</version>
 
     <name>Gravitee.io APIM - Elasticsearch - Common</name>
 
     <properties>
-        <gravitee-bom.version>1.1</gravitee-bom.version>
-        <gravitee-common.version>1.20.5</gravitee-common.version>
-        <gravitee-node.version>1.10.3</gravitee-node.version>
+        <gravitee-bom.version>2.7</gravitee-bom.version>
+        <gravitee-common.version>2.0.0-alpha.1</gravitee-common.version>
+        <gravitee-node.version>2.0.0-alpha.3</gravitee-node.version>
         <freemarker.version>2.3.31</freemarker.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
         <netty-all.version>4.1.36.Final</netty-all.version>
@@ -112,7 +112,7 @@
 
         <dependency>
             <groupId>io.vertx</groupId>
-            <artifactId>vertx-rx-java2</artifactId>
+            <artifactId>vertx-rx-java3</artifactId>
             <scope>provided</scope>
         </dependency>
 
