--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,8 @@
 
     <properties>
         <gravitee-bom.version>2.7</gravitee-bom.version>
-        <gravitee-common.version>2.0.0-alpha.1</gravitee-common.version>
-        <gravitee-node.version>2.0.0-alpha.3</gravitee-node.version>
+        <gravitee-common.version>2.0.0</gravitee-common.version>
+        <gravitee-node.version>2.0.0</gravitee-node.version>
         <freemarker.version>2.3.31</freemarker.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
         <netty-all.version>4.1.36.Final</netty-all.version>
