--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
     <groupId>io.gravitee.elasticsearch</groupId>
     <artifactId>gravitee-common-elasticsearch</artifactId>
-    <version>4.0.0-testcontainer-SNAPSHOT</version>
+    <version>4.1.0-testcontainer-SNAPSHOT</version>
 
     <name>Gravitee.io APIM - Elasticsearch - Common</name>
 
@@ -175,6 +175,23 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-remote-resources-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>bundle</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <includes>
+                        <include>freemarker/**</include>
+                    </includes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
