--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,14 @@
 
     <groupId>io.gravitee.elasticsearch</groupId>
     <artifactId>gravitee-common-elasticsearch</artifactId>
-    <version>4.1.0-alpha.1</version>
+    <version>4.1.0-support-v4-logging-SNAPSHOT</version>
 
     <name>Gravitee.io APIM - Elasticsearch - Common</name>
 
     <properties>
         <gravitee-bom.version>3.0.0</gravitee-bom.version>
-        <gravitee-common.version>2.0.0</gravitee-common.version>
+        <gravitee-common.version>2.1.0-alpha.3</gravitee-common.version>
+        <gravitee-reporter-api.version>1.25.0-alpha.1</gravitee-reporter-api.version>
         <freemarker.version>2.3.31</freemarker.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
         <testcontainers.version>1.17.6</testcontainers.version>
@@ -59,6 +60,12 @@
             <groupId>io.gravitee.common</groupId>
             <artifactId>gravitee-common</artifactId>
             <version>${gravitee-common.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.gravitee.reporter</groupId>
+            <artifactId>gravitee-reporter-api</artifactId>
+            <version>${gravitee-reporter-api.version}</version>
             <scope>provided</scope>
         </dependency>
 
