--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
     <properties>
         <gravitee-bom.version>3.0.0</gravitee-bom.version>
         <gravitee-common.version>2.1.0-alpha.3</gravitee-common.version>
-        <gravitee-reporter-api.version>1.25.0-apim-490-add-error-metric-SNAPSHOT</gravitee-reporter-api.version>
+        <gravitee-reporter-api.version>1.25.0-alpha.4</gravitee-reporter-api.version>
         <freemarker.version>2.3.31</freemarker.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
         <testcontainers.version>1.17.6</testcontainers.version>
