--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,9 @@
     <name>Gravitee.io APIM - Elasticsearch - Common</name>
 
     <properties>
-        <gravitee-bom.version>3.0.0</gravitee-bom.version>
-        <gravitee-common.version>2.1.0-alpha.3</gravitee-common.version>
-        <gravitee-reporter-api.version>1.25.0-alpha.4</gravitee-reporter-api.version>
+        <gravitee-bom.version>4.0.0</gravitee-bom.version>
+        <gravitee-common.version>2.1.0</gravitee-common.version>
+        <gravitee-reporter-api.version>1.25.0</gravitee-reporter-api.version>
         <freemarker.version>2.3.31</freemarker.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
         <testcontainers.version>1.17.6</testcontainers.version>
