--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,3 @@
 {
-    "extends": ["config:base", "schedule:earlyMondays"],
-    "prConcurrentLimit": 3,
-    "rebaseWhen": "conflicted"
+    "extends": ["github>gravitee-io/renovate-config:lib"]
 }
