--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <freemarker.version>2.3.31</freemarker.version>
         <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
         <testcontainers.version>1.17.6</testcontainers.version>
+        <opensearch.testcontainers.version>2.1.1</opensearch.testcontainers.version>
     </properties>
 
     <dependencyManagement>
@@ -168,6 +169,12 @@
             <groupId>org.testcontainers</groupId>
             <artifactId>elasticsearch</artifactId>
             <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.opensearch</groupId>
+            <artifactId>opensearch-testcontainers</artifactId>
+            <version>${opensearch.testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
